Completion of day 2 activities.  Forgot to commit yesterday.  Will commit often moving forward

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,24 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: 'Source Sans Pro', 'sans-serif';
   font-size: 24px;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+  background-color: #f4f1ec;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.bold-600 {
+  font-weight: 600;
+}
+
+img {
+  border-radius: 50%;
+}
