--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -6,7 +6,7 @@ article:hover {
   box-shadow: 10px 10px rgb(42, 190, 104);
 }
 
-article:hover .handle {
+article:hover .handle, article:hover .linkage {
   color:  rgb(42, 190, 104);
   display: block;
 }
@@ -15,6 +15,7 @@ article {
   word-wrap: break-word;
   border: solid #545149 5px;
   margin: 50px 0;
+  font-size: 18px;
 }
 
 article header {
@@ -53,13 +54,9 @@ article footer {
 
 article footer p {
 border: none;
-font-size: 18px;
 }
 
 .linkage {
   margin-right: 10px;
-}
-
-i {
-  font-size: 18px;
+  display: none;
 }
