--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,13 +5,14 @@
   justify-content: center;
   background-color: #002612;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-  height: 400px;
+  height: 520px;
   width: 100%;
-  margin-top: 120px;
+  padding-top: 120px;
 }
 
 .OG h1 {
   color: white;
   font-weight: 300;
   margin: 0;
+  font-size: 35px;
 }
