--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -46,6 +46,10 @@ img {
   outline: none;
   cursor: pointer;
   border-radius: 50%;
+  animation-name: spin;
+  animation-duration: 3000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
 }
 
 #scrollButton:hover {
@@ -53,4 +57,13 @@ img {
     0 0 7.5px 3.75px #fff,  /* inner white */
     0 0 12.5px 7.5px #f0f, /* middle magenta */
     0 0 17.5px 11.25px #0ff; /* outer cyan */
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
 }
