--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,5 @@
 #new-tweet {
+  display: none;
   margin: 0 5px;
 }
 
@@ -6,10 +7,10 @@ textarea {
   background-color: #f4f1ec;
   border: none;
   border-bottom: solid #545149 5px;
-  outline: none;
   font-weight: 700;
   height: 50px;
   width: 100%;
+  outline: none;
   resize: none;
   margin-bottom: 5px;
 }
@@ -40,4 +41,9 @@ form {
 
 .invalid {
   color: red;
+}
+
+#error {
+  display: none;
+  margin-top: 50px;
 }
