--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
-.OG {
+/* Styles for main header of Tweeter page */
+#OG {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,10 +10,9 @@
   width: 100%;
   padding-top: 120px;
 }
-
-.OG h1 {
+#OG h1 {
   color: white;
+  font-size: 35px;
   font-weight: 300;
   margin: 0;
-  font-size: 35px;
 }
